--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ pages:
   script:
   - mkdir .public
   - cp -r webapp/* .public
+  - cp questions.json .public
   - mv .public public
   artifacts:
     paths:
